
    <resources>
        <string name="app_name">Eventos</string>
        <string name="add_event">Añadir Evento</string>
        <string name="name">Nombre</string>
        <string name="description">Descripción</string>
        <string name="location">Dirección</string>
        <string name="price">Precio</string>
        <string name="date">Fecha</string>
        <string name="save">Guardar</string>
        <string name="cancel">Cancelar</string>
    </resources>

