<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/et_event_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name" />

    <EditText
        android:id="@+id/et_event_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/description" />

    <EditText
        android:id="@+id/et_event_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/location" />

    <EditText
        android:id="@+id/et_event_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/price"
        android:inputType="numberDecimal" />

    <EditText
        android:id="@+id/et_event_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/date" />

    <Button
        android:id="@+id/btn_save_event"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save" />

    <Button
        android:id="@+id/btn_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cancel" />
</LinearLayout>
